Fix text wrapping issue

--- a/public/styles.css
+++ b/public/styles.css
@@ -433,6 +433,7 @@ template {
 body {
   background-color: #e4f0f7;
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  margin: 0;
 }
 
 .header,
@@ -472,7 +473,9 @@ h3 {
 
 code {
   font-size: .8em;
-  white-space: pre;
+  /*white-space: pre;*/
+  overflow: scroll;
+  width: 100%;
 }
 
 a {
